--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -17,9 +17,13 @@ spec:
       containers:
         - image: lanecwagner/synergychat-api:latest
           name: synergychat-api
-          env:
-            - name: API_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-api-configmap
-                  key: API_PORT
+          envFrom:
+            - configMapRef:
+                name: synergychat-api-configmap
+          volumeMounts:
+            - name: synergychat-api-pvc
+              mountPath: /persist
+      volumes:
+        - name: synergychat-api-pvc
+          persistentVolumeClaim:
+            claimName: synergychat-api-pvc
